Added parentheses buttons. Made GUI prettier. Rewrote code to work better with two output windows. Added count, setOutput, findFunc functions and their documentation. Updated README.md

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
     <string name="buttonClear">Clear</string>
     <string name="buttonClearEverything">CE</string>
     <string name="buttonPoint">.</string>
+    <string name="leftPar">(</string>
+    <string name="rightPar">)</string>
 </resources>
